allow specifying either KVER or KDIR for make

--- a/mod/Makefile
+++ b/mod/Makefile
@@ -6,7 +6,8 @@ obj-m := piuio.o
 else
 
 # Default to building for the currently running kernel
-KDIR ?= /lib/modules/$(shell uname -r)/build
+KVER ?= $(shell uname -r)
+KDIR ?= /lib/modules/$(KVER)/build
 
 # If DESTDIR is given, output there
 INSTALL_MOD_PATH ?= $(DESTDIR)
