--- a/mod/Makefile
+++ b/mod/Makefile
@@ -13,6 +13,12 @@ KDIR ?= /lib/modules/$(KVER)/build
 INSTALL_MOD_PATH ?= $(DESTDIR)
 export INSTALL_MOD_PATH
 
+# This would otherwise default to "extra", which isn't in the depmod
+# configuration on either Arch or Ubuntu.  Both have "updates" though.  You can
+# override by setting this when running make install.
+INSTALL_MOD_DIR ?= updates
+export INSTALL_MOD_DIR
+
 all: modules ;
 
 install: modules_install ;
